# uttt

./: Cargo.toml  README.md  flake.nix  run.sh
client/: Cargo.toml
client/src/: board_ui.rs  connecting.rs  game.rs  main.rs  playing.rs  util.rs  waiting.rs
client/src/util/: board_ui.rs  stats_ui.rs
common/: Cargo.toml
common/src/: board.rs  game.rs  generic.rs  lib.rs  line.rs  message.rs  msg.rs  pos.rs  specific.rs
common/src/board/: generic.rs  line.rs  pos.rs  specific.rs  tile.rs
common/src/generic/: board.rs  line.rs  pos.rs
common/src/pos/: generic.rs  specific.rs
common/src/specific/: board.rs  game.rs  message.rs  pos.rs
server/: Cargo.toml
server/src/: main.rs  util.rs
