[package]
name = "uttt-client"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2021"

[dependencies]
common = { package = "uttt-common", path = "../common" }

serde = { version = "1", features = ["derive"] }
ron = "0.8"

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eyre = "0.6.10"
color-eyre = "0.6.2"
rand = "0.8.5"

[dependencies.eframe]
version = "0.23.0"
default-features = false
features = ["x11", "wayland", "wgpu", "accesskit", "default_fonts"]
