[package]
name = "uttt-client"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2021"

[dependencies]
common = { package = "uttt-common", path = "../common" }

rand = "0.8.5"

[dependencies.eframe]
version = "0.24.1"
default-features = false
features = ["wayland", "x11", "wgpu", "default_fonts"]


[features]
auto_connect = []
auto_play = []
auto_next_round = []
